--- a/service/document.html
+++ b/service/document.html
@@ -25,13 +25,19 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <script src="./darkmode.js"></script>
     <script defer src="./index.js"></script>
 </head>
 
-<body>
-    <button class="btn btn-circle btn-outline button-top-PP animate__animated" id="top-button">
+<body onmousemove="GetCursor(event)">
+    <button class="btn btn-circle btn-outline button-top animate__animated" id="top-button">
         <span class="material-symbols-outlined">
             vertical_align_top
+        </span>
+    </button>
+    <button onclick="RealDarkMode()" class="btn btn-circle btn-outline button-dark animate__animated">
+        <span class="material-symbols-outlined">
+            nights_stay
         </span>
     </button>
     <div>
