--- a/service/index.html
+++ b/service/index.html
@@ -25,10 +25,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <script src="./darkmode.js"></script>
     <script defer src="./index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 
-<body>
+<body onmousemove="GetCursor(event)">
     <!-- <div role="alert" class="alert alert-warning alert-top">
         <svg xmlns="http://www.w3.org/2000/svg" class="stroke-current shrink-0 h-6 w-6" fill="none" viewBox="0 0 24 24">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -39,6 +41,11 @@
     <button class="btn btn-circle btn-outline button-top animate__animated" id="top-button">
         <span class="material-symbols-outlined">
             vertical_align_top
+        </span>
+    </button>
+    <button onclick="RealDarkMode()" class="btn btn-circle btn-outline button-dark animate__animated">
+        <span class="material-symbols-outlined">
+            nights_stay
         </span>
     </button>
     <div>
@@ -226,12 +233,15 @@
                     <p class="py-6">Fuumi is a music bot created by FujaTyping in response to a request from his close
                         friend, ph007phop. Fuumi can play music from a variety of sources and quickly gained popularity
                         among Discord users.</p>
-                    <div class="btn-group">
+                    <div class="join lastjoin">
                         <button onclick="window.location.href = 'https://discord.gg/D5nVCNskqN';"
-                            class="btn bg-base-300"><span class="material-symbols-outlined">support_agent</span>
+                            class="btn join-item"><span class="material-symbols-outlined">support_agent</span>
                             Support</button>
+                        <button onclick="window.location.href = 'https://buymeacoffee.com/fujatyping';"
+                            class="btn join-item"><span class="material-symbols-outlined">savings</span>
+                            Donate</button>
                         <button onclick="window.location.href = 'https://github.com/FujaTyping/Futami';"
-                            class="btn btn-outline"><span class="material-symbols-outlined">frame_source</span>
+                            class="btn join-item"><span class="material-symbols-outlined">frame_source</span>
                             Source code</button>
                     </div>
                 </div>
@@ -240,13 +250,14 @@
         <footer class="footer footer-center p-4 bg-base-300 text-base-content">
             <aside>
                 <p>Copyright © <a href="https://siraphop.me/">FujaTyping</a> 2023-2024 | All right reserved</p>
-                <img width="200px" style="margin-top: 8px;" src="https://count.getloli.com/get/@futami?theme=moebooru">
+                <img width="250px" style="margin-top: 8px;display: none;"
+                    src="https://count.getloli.com/get/@futami?theme=moebooru">
             </aside>
         </footer>
     </div>
-    <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js"
+    <!-- <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js"
         data-id="fujatyping" data-description="Support me on Buy me a coffee!" data-message="" data-color="#5F7FFF"
-        data-position="Right" data-x_margin="18" data-y_margin="18"></script>
+        data-position="Right" data-x_margin="18" data-y_margin="18"></script> -->
     <dialog id="filter_modal" class="modal">
         <div class="modal-box">
             <h3 class="font-bold text-lg">Filter list <a href="https://ffmpeg.org/ffmpeg-filters.html">(FFmpeg audio
