--- a/firebase/public/index.html
+++ b/firebase/public/index.html
@@ -121,11 +121,11 @@
         </div>
         <div style="padding-top: 0;" class="hero bg-base-200 hero-normal">
             <div style="gap: 3rem;" class="hero-content flex-col lg:flex-row-reverse">
-                <img style="max-width: 20rem;" src="./assets/feature-chat.png"
+                <img style="max-width: 18rem;" src="./assets/feature-fun.png"
                     class="max-w-sm rounded-lg shadow-2xl image-feature" />
                 <div>
-                    <h1 class="text-5xl font-bold">Interact with you</h1>
-                    <p class="py-6">Chat with Futami</p>
+                    <h1 class="text-5xl font-bold">Make discord more funny</h1>
+                    <p class="py-6">With fun command</p>
                 </div>
             </div>
         </div>
@@ -138,13 +138,20 @@
                 </div>
             </div>
         </div>
-        <div style="padding-top: 0;" class="hero bg-base-200 hero-normal">
-            <div style="gap: 3rem;" class="hero-content flex-col lg:flex-row-reverse">
-                <img style="max-width: 18rem;" src="./assets/feature-fun.png"
-                    class="max-w-sm rounded-lg shadow-2xl image-feature" />
-                <div>
-                    <h1 class="text-5xl font-bold">Make discord more funny</h1>
-                    <p class="py-6">With fun command</p>
+        <div class="bg-base-200">
+            <p id="MoreText" onclick="ShowMoreFeature()"
+                style="text-align: center;color: gray;text-decoration: underline;margin-top: 0;padding: 10px;">Show more
+                feature</p>
+            <div class="tilt-in-bottom-1" style="display: none;" id="OtherFeature">
+                <div style="padding-top: 0;" class="hero hero-normal">
+                    <div style="gap: 3rem;" class="hero-content flex-col lg:flex-row-reverse">
+                        <img style="max-width: 20rem;" src="./assets/feature-chat.png"
+                            class="max-w-sm rounded-lg shadow-2xl image-feature" />
+                        <div>
+                            <h1 class="text-5xl font-bold">Interact with you</h1>
+                            <p class="py-6">Chat with Futami</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
