--- a/firebase/public/index.html
+++ b/firebase/public/index.html
@@ -238,7 +238,7 @@
                     <img style="max-width: 18rem;margin: auto;margin-top: 22.5px;" src="./assets/banner/Card-Futami.png"
                         class="max-w-sm rounded-lg shadow-2xl" />
                     <p class="py-6">Fuumi is a music bot created by FujaTyping in response to a request from his close
-                        friend, ph007phop. Fuumi can play music from a variety of sources and quickly gained popularity
+                        friend, ph007phop. Futami can play music from a variety of sources and quickly gained popularity
                         among Discord users.</p>
                     <div class="join lastjoin">
                         <button onclick="window.location.href = 'https://discord.gg/D5nVCNskqN';"
