Add stat to homepage

--- a/firebase/public/404.html
+++ b/firebase/public/404.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./assets/fav.ico" type="image/x-icon">
     <meta property="og:type" content="website" />
-    <title>Futami</title>
+    <title>Futami | 404</title>
     <meta name="theme-color" content="#345ca8" />
     <meta name="description" content="Futami - 404">
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.8.1/dist/full.css" rel="stylesheet" type="text/css" />
