--- a/firebase/public/statics.html
+++ b/firebase/public/statics.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./assets/fav.ico" type="image/x-icon">
     <meta property="og:type" content="website" />
-    <title>Futami</title>
+    <title>Futami | สถานะฟูตามิ</title>
     <meta name="theme-color" content="#345ca8" />
     <meta name="description" content="Futami - Statics">
     <meta property="og:image" content="https://futami.siraphop.me/assets/banner/content-statics.png" />
@@ -59,7 +59,7 @@
                 <div class="max-w-md lefted">
                     <div style="display: block;" id="FetchLoader">
                         <p class="py-4" style="text-align: center;">Fetching data... (This process may take a while)</p>
-                        <div class="loader"></div>
+                        <progress class="progress"></progress>
                     </div>
                     <div id="AlertFailed" style="margin-top: 40px;display: none;" role="alert"
                         class="alert alert-error swing-in-top-fwd">
@@ -125,12 +125,12 @@
                             </tr>
                         </tbody>
                     </table>
-                    <h1 style="font-family: Young Serif;margin-top: 50px;" class="text-5xl font-bold">Web Statics</h1>
+                    <!-- <h1 style="font-family: Young Serif;margin-top: 50px;" class="text-5xl font-bold">Web Statics</h1>
                     <p class="py-4">Futami web visit count</p>
                     <div class="footer footer-center">
                         <img width="275px" style="margin-top: 8px;"
                             src="https://count.getloli.com/get/@futami?theme=moebooru">
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
