--- a/firebase/public/document.html
+++ b/firebase/public/document.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./assets/fav.ico" type="image/x-icon">
     <meta property="og:type" content="website" />
-    <title>Futami</title>
+    <title>Futami | เอกสารที่เกี่ยวข้องกับฟูตามิ</title>
     <meta name="theme-color" content="#345ca8" />
     <meta name="description" content="Futami - Privacy & Terms">
     <meta property="og:image" content="https://futami.siraphop.me/assets/banner/content-pat.png" />
