--- a/firebase/public/index.html
+++ b/firebase/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./assets/fav.ico" type="image/x-icon">
     <meta property="og:type" content="website" />
-    <title>Futami</title>
+    <title>Futami | หน้าหลักฟูตามิ</title>
     <meta name="theme-color" content="#345ca8" />
     <meta name="description" content="Futami - Imagine music bot">
     <meta property="og:image" content="https://futami.siraphop.me/assets/banner/content-index.png" />
@@ -27,6 +27,7 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <script src="./darkmode.js"></script>
     <script defer src="./index.js"></script>
+    <script defer src="./request.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 
@@ -73,6 +74,44 @@
                                 class="material-symbols-outlined">open_in_new</span></button>
                         <button onclick="window.location.href = './document.html';" class="btn">Privacy &
                             Terms</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div style="padding-bottom: 20px;" class="hero bg-base-100">
+            <div class="hero-content text-center">
+                <div class="stats stats-vertical lg:stats-horizontal shadow">
+                    <div class="stat bg-base-200">
+                        <div class="stat-figure text-base-300">
+                            <span style="font-size: 35px;" class="material-symbols-outlined">
+                                location_away
+                            </span>
+                        </div>
+                        <div class="stat-title">Guild (Server)</div>
+                        <div class="stat-value">
+                            <e class="text-focus-in" id="DataGuild" style="display: none;">Fetching</e><span
+                                id="Loader1" class="loading loading-spinner loading-md"></span><span id="LoaderError1"
+                                style="font-size: 2rem !important;display: none;"
+                                class="material-symbols-outlined tilt-in-bottom-1">
+                                sync_problem
+                            </span>
+                        </div>
+                    </div>
+                    <div class="stat bg-base-200">
+                        <div class="stat-figure text-base-300">
+                            <span style="font-size: 35px;" class="material-symbols-outlined">
+                                group
+                            </span>
+                        </div>
+                        <div class="stat-title">Users</div>
+                        <div class="stat-value">
+                            <e class="text-focus-in" id="DataUsers" style="display: none;">Fetching</e><span
+                                id="Loader2" class="loading loading-spinner loading-md"></span><span id="LoaderError2"
+                                style="font-size: 2rem !important;display: none;"
+                                class="material-symbols-outlined tilt-in-bottom-1">
+                                sync_problem
+                            </span>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -257,8 +296,8 @@
         <footer class="footer footer-center p-4 bg-base-300 text-base-content">
             <aside>
                 <p>Copyright © <a href="https://siraphop.me/">FujaTyping</a> 2023-2024 | All right reserved</p>
-                <img width="250px" style="margin-top: 8px;display: none;"
-                    src="https://count.getloli.com/get/@futami?theme=moebooru">
+                <!-- <img width="250px" style="margin-top: 8px;display: none;"
+                    src="https://count.getloli.com/get/@futami?theme=moebooru"> -->
             </aside>
         </footer>
     </div>
