--- a/service/statics.html
+++ b/service/statics.html
@@ -25,9 +25,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <script src="./darkmode.js"></script>
+    <script src="./script/darkmode.js"></script>
     <script defer src="./index.js"></script>
-    <script defer src="./request.js"></script>
+    <script defer src="./script/request.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 
