--- a/service/index.html
+++ b/service/index.html
@@ -320,12 +320,13 @@
     <dialog id="thankyou" class="modal">
         <div class="modal-box">
             <h3 class="font-bold text-lg">Thank you !</h3>
-            <p class="py-4">🎉 Thank you for invite Futami to the server<br>You can discover my command in this
-                page<br><br>There are 2 types of commands: <kbd class="kbd kbd-sm">/</kbd> Slash command and <kbd
-                    class="kbd kbd-sm">f.</kbd>Prefix<br>● You can
-                interact with Futami by using a chat system (try to type futami, Futami or @Futami and the message that
-                you want to talk with Futami)<br><br>If you like this project you can donate to Futami : <a
-                    style="text-decoration: underline;" href="https://buymeacoffee.com/fujatyping">By me a coffee</a>
+            <img style="max-width: 18rem;margin: auto;" src="./assets/Futami-thanks.png" class="max-w-sm rounded-lg" />
+            <p class="py-4">🎉 Thank you for inviting Futami to the server!<br>Explore Futami's commands on this
+                page<br><br>If you enjoy this project, consider supporting Futami : <a
+                    style="text-decoration: underline;" href="https://buymeacoffee.com/fujatyping">By me a
+                    coffee</a><br>Encountering issues? Join our support server and fill out the : <a
+                    href="https://discord.gg/D5nVCNskqN" style="text-decoration: underline;">Support
+                    form</a>
             </p>
         </div>
         <form method="dialog" class="modal-backdrop">
