--- a/service/404.html
+++ b/service/404.html
@@ -35,7 +35,7 @@
             <div style="gap: 3rem;"
                 class="hero-content flex-col lg:flex-row-reverse animate__animated animate__fadeInUp">
                 <div class="">
-                    <img style="max-width: 18rem;" src="./assets/Futami-maskot.png"
+                    <img style="max-width: 18rem;" src="./assets/maskcot/Futami-help.png"
                         class="max-w-sm rounded-lg parallax-img" />
                 </div>
                 <div>
