--- a/service/index.html
+++ b/service/index.html
@@ -320,7 +320,8 @@
     <dialog id="thankyou" class="modal">
         <div class="modal-box">
             <h3 class="font-bold text-lg">Thank you !</h3>
-            <img style="max-width: 18rem;margin: auto;" src="./assets/Futami-thanks.png" class="max-w-sm rounded-lg" />
+            <img style="max-width: 18rem;margin: auto;" src="./assets/maskcot/Futami-thankyou.png"
+                class="max-w-sm rounded-lg" />
             <p class="py-4">🎉 Thank you for inviting Futami to the server!<br>Explore Futami's commands on this
                 page<br><br>If you enjoy this project, consider supporting Futami : <a
                     style="text-decoration: underline;" href="https://buymeacoffee.com/fujatyping">By me a
