Update cdn to server side

--- a/firebase/public/404.html
+++ b/firebase/public/404.html
@@ -9,10 +9,10 @@
     <title>Futami | 404</title>
     <meta name="theme-color" content="#345ca8" />
     <meta name="description" content="Futami - 404">
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@3.8.1/dist/full.css" rel="stylesheet" type="text/css" />
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="./module/daisyui.css" rel="stylesheet" type="text/css" />
+    <script src="./module/tailwind.js"></script>
     <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="./module/animate.css" />
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <script src="./script/darkmode.js"></script>
