--- a/firebase/public/document.html
+++ b/firebase/public/document.html
@@ -19,10 +19,10 @@
     <meta name="twitter:site" content="@fujatyping" />
     <meta name="twitter:creator" content="@fujatyping" />
     <meta property="twitter:image" content="https://futami.siraphop.me/assets/banner/content-pat.png" />
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@3.8.1/dist/full.css" rel="stylesheet" type="text/css" />
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="./module/daisyui.css" rel="stylesheet" type="text/css" />
+    <script src="./module/tailwind.js"></script>
     <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="./module/animate.css" />
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <script src="./script/darkmode.js"></script>
