--- a/firebase/public/statics.html
+++ b/firebase/public/statics.html
@@ -83,7 +83,8 @@
                                 </span>
                             </div>
                             <div class="stat-title">Cpu Usage</div>
-                            <div id="DataCpu" class="stat-value">00.00%</div>
+                            <div id="DataCpu" class="stat-value"><span id="Loader1"
+                                    class="loading loading-spinner loading-md"></span></div>
                         </div>
 
                         <div class="stat">
@@ -93,7 +94,8 @@
                                 </span>
                             </div>
                             <div class="stat-title">Ram Usage</div>
-                            <div id="DataRam" class="stat-value">00.00%</div>
+                            <div id="DataRam" class="stat-value"><span id="Loader2"
+                                    class="loading loading-spinner loading-md"></span></div>
                         </div>
 
                         <div class="stat">
@@ -103,7 +105,8 @@
                                 </span>
                             </div>
                             <div class="stat-title">Ping</div>
-                            <div id="DataPing" class="stat-value">0</div>
+                            <div id="DataPing" class="stat-value"><span id="Loader3"
+                                    class="loading loading-spinner loading-md"></span></div>
                         </div>
 
                     </div>
