--- a/service/index.html
+++ b/service/index.html
@@ -249,6 +249,7 @@
                                     <a class="usage">↳ usage : enter user</a><br>
                                     <b><kbd class="kbd kbd-sm">/</kbd> fasttype</b> : Test your type speed<br>
                                     <b><kbd class="kbd kbd-sm">/</kbd> matchpairs</b> : Play match pairs emoji game<br>
+                                    <b><kbd class="kbd kbd-sm">/</kbd> canvas</b> : Create you own meme<br>
                                 </p>
                             </div>
                         </div> <br>
