--- a/service/index.html
+++ b/service/index.html
@@ -250,6 +250,7 @@
                                     <b><kbd class="kbd kbd-sm">/</kbd> fasttype</b> : Test your type speed<br>
                                     <b><kbd class="kbd kbd-sm">/</kbd> matchpairs</b> : Play match pairs emoji game<br>
                                     <b><kbd class="kbd kbd-sm">/</kbd> canvas</b> : Create you own meme<br>
+                                    <a class="usage">↳ usage : enter format , user , text</a>
                                 </p>
                             </div>
                         </div> <br>
