--- a/service/index.html
+++ b/service/index.html
@@ -215,10 +215,13 @@
                                     <a class="usage">↳ usage : enter song name or url</a><br>
                                     <b>pause</b> : pause a song<br>
                                     <b>queue</b> : See song queue<br>
+                                    <b>shuffle</b> : Shuffle song queue<br>
                                     <b>skip</b> : Skip current song<br>
                                     <b>stop</b> : Stop current song and leave<br>
                                     <b>volume</b> : Change volume<br>
                                     <a class="usage">↳ usage : enter value of volume</a><br>
+                                    <b><kbd class="kbd kbd-sm">/</kbd> lyrics</b> : Show lyrics of the song<br>
+                                    <a class="usage">↳ usage : enter song name</a>
                                 </p>
                             </div>
                         </div> <br>
