--- a/service/index.html
+++ b/service/index.html
@@ -35,6 +35,7 @@
 <body onmousemove="GetCursor(event)">
     <audio id="Hello" src="/assets/sound/Futami.wav" preload="auto"></audio>
     <audio id="About" src="/assets/sound/AboutFutami.wav" preload="auto"></audio>
+    <audio id="ThankYouIV" src="/assets/sound/ThankYou.wav" preload="auto"></audio>
     <!-- <div role="alert" class="alert alert-warning alert-top">
         <svg xmlns="http://www.w3.org/2000/svg" class="stroke-current shrink-0 h-6 w-6" fill="none" viewBox="0 0 24 24">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
