--- a/service/index.html
+++ b/service/index.html
@@ -225,8 +225,7 @@
                                     <b>stop</b> : Stop current song and leave<br>
                                     <b>volume</b> : Change volume<br>
                                     <a class="usage">↳ usage : enter value of volume</a><br>
-                                    <b><kbd class="kbd kbd-sm">/</kbd> lyrics</b> : Show lyrics of the song<br>
-                                    <a class="usage">↳ usage : enter song name</a>
+                                    <b><kbd class="kbd kbd-sm">/</kbd> lyrics</b> : Show lyrics of the song
                                 </p>
                             </div>
                         </div> <br>
@@ -238,9 +237,7 @@
                             <div class="collapse-content lefted">
                                 <p>
                                     <b><kbd class="kbd kbd-sm">/</kbd> timeout</b> : timeout member in guild<br>
-                                    <a class="usage">↳ usage : enter user , duration , reason</a><br>
-                                    <b><kbd class="kbd kbd-sm">/</kbd> kick</b> : kick member<br>
-                                    <a class="usage">↳ usage : enter user , reason</a>
+                                    <b><kbd class="kbd kbd-sm">/</kbd> kick</b> : kick member
                                 </p>
                             </div>
                         </div> <br>
@@ -254,11 +251,10 @@
                                     <b><kbd class="kbd kbd-sm">/</kbd> emote</b> : Show your emote<br>
                                     <b><kbd class="kbd kbd-sm">/</kbd> meme</b> : Random meme generator<br>
                                     <b><kbd class="kbd kbd-sm">/</kbd> tictactoe</b> : Play tic tac toe game<br>
-                                    <a class="usage">↳ usage : enter user</a><br>
                                     <b><kbd class="kbd kbd-sm">/</kbd> fasttype</b> : Test your type speed<br>
                                     <b><kbd class="kbd kbd-sm">/</kbd> matchpairs</b> : Play match pairs emoji game<br>
                                     <b><kbd class="kbd kbd-sm">/</kbd> canvas</b> : Create you own meme<br>
-                                    <a class="usage">↳ usage : enter format , user , text</a>
+                                    <b><kbd class="kbd kbd-sm">/</kbd> waifu</b> : Random waifu image
                                 </p>
                             </div>
                         </div> <br>
@@ -286,7 +282,7 @@
                     <h1 style="font-family: Young Serif;" class="text-5xl font-bold">Story</h1>
                     <img style="max-width: 18rem;margin: auto;margin-top: 22.5px;" src="./assets/banner/Card-Futami.png"
                         class="max-w-sm rounded-lg shadow-2xl" />
-                    <p class="py-6">Fuumi is a music bot created by FujaTyping in response to a request from his close
+                    <p class="py-6">Futami is a music bot created by FujaTyping in response to a request from his close
                         friend, ph007phop. Futami can play music from a variety of sources and quickly gained popularity
                         among Discord users. &nbsp;<span style="display: inline;" onclick="FutamiSay('About')"
                             class="point">🎙</span></p>
