--- a/service/index.html
+++ b/service/index.html
@@ -268,6 +268,7 @@
                                     <b><kbd class="kbd kbd-sm">/</kbd> air</b> : Check PM 2.5 Status<br>
                                     <b><kbd class="kbd kbd-sm">/</kbd> info</b> : Show server info<br>
                                     <b><kbd class="kbd kbd-sm">/</kbd> about</b> : See about me<br>
+                                    <b><kbd class="kbd kbd-sm">/</kbd> url</b> : A Url tools<br>
                                     <b>ping</b> : See my response time<br>
                                 </p>
                             </div>
