--- a/service/index.html
+++ b/service/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./assets/fav.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/assets/fav.ico" type="image/x-icon">
     <meta property="og:type" content="website" />
     <title>Futami | หน้าหลักฟูตามิ</title>
     <meta name="theme-color" content="#345ca8" />
@@ -19,17 +19,17 @@
     <meta name="twitter:site" content="@fujatyping" />
     <meta name="twitter:creator" content="@fujatyping" />
     <meta property="twitter:image" content="https://futami.siraphop.me/assets/banner/content-index.png" />
-    <link href="./module/daisyui.css" rel="stylesheet" type="text/css" />
-    <script src="./module/tailwind.js"></script>
+    <link href="/module/daisyui.css" rel="stylesheet" type="text/css" />
+    <script src="/module/tailwind.js"></script>
     <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="./module/animate.css" />
+    <link rel="stylesheet" href="/module/animate.css" />
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <script src="./script/darkmode.js"></script>
-    <script defer src="./index.js"></script>
-    <script defer src="./script/request.js"></script>
-    <script src="./module/axios.js"></script>
-    <script src="./module/typed.js"></script>
+    <script src="/script/darkmode.js"></script>
+    <script defer src="/index.js"></script>
+    <script defer src="/script/request.js"></script>
+    <script src="/module/axios.js"></script>
+    <script src="/module/typed.js"></script>
 </head>
 
 <body onmousemove="GetCursor(event)">
@@ -59,7 +59,7 @@
                 <div style="margin-right: 15px;">
                     <div onclick="FutamiSay('Hello')" class="avatar">
                         <div class="rounded-full ring ring-secondary ring-offset-base-100 ring-offset-2">
-                            <img class="profile" src="./assets/fav.ico" />
+                            <img class="profile" src="/assets/fav.ico" />
                         </div>
                     </div>
                 </div>
@@ -70,7 +70,7 @@
                     <div class="btn-group">
                         <button onclick="pleaseread_modal.showModal()" class="btn btn-outline">Invite now <span
                                 class="material-symbols-outlined">open_in_new</span></button>
-                        <button onclick="window.location.href = './document.html';" class="btn">Privacy &
+                        <button onclick="window.location.href = '/document.html';" class="btn">Privacy &
                             Terms</button>
                     </div>
                 </div>
@@ -116,7 +116,7 @@
         </div>
         <div style="padding-bottom: 5px;" class="hero bg-base-100 arrow-assets">
             <div class="hero-content text-center">
-                <a href="./statics.html" class="btn"><span class="material-symbols-outlined">equalizer</span>
+                <a href="/statics.html" class="btn"><span class="material-symbols-outlined">equalizer</span>
                     Futami Statics</a>
             </div>
         </div>
@@ -126,7 +126,7 @@
                         alt="Better Stack Badge"></a>
             </span>
         </div>
-        <img width="100%" src="./assets/divider.png">
+        <img width="100%" src="/assets/divider.png">
         <div style="padding-top: 40px;" class="hero bg-base-200">
             <div class="hero-content text-center">
                 <div class="max-w-md">
@@ -136,7 +136,7 @@
         </div>
         <div style="padding-top: 5px;" class="hero bg-base-200 hero-normal hero-music">
             <div style="gap: 3rem;" class="hero-content flex-col lg:flex-row-reverse">
-                <img style="max-width: 18rem;" src="./assets/feature-music.png"
+                <img style="max-width: 18rem;" src="/assets/feature-music.png"
                     class="max-w-sm rounded-lg shadow-2xl" />
                 <div>
                     <h1 class="text-5xl font-bold">Support many music platform</h1>
@@ -154,7 +154,7 @@
         </div>
         <div style="padding-top: 0;" class="hero bg-base-200 hero-normal hero-game">
             <div style="gap: 3rem;" class="hero-content flex-col lg:flex-row">
-                <img style="max-width: 18rem;" src="./assets/feature-game.png"
+                <img style="max-width: 18rem;" src="/assets/feature-game.png"
                     class="max-w-sm rounded-lg shadow-2xl image-feature" />
                 <div>
                     <h1 class="text-5xl font-bold">Play game anywhere</h1>
@@ -164,7 +164,7 @@
         </div>
         <div style="padding-top: 0;" class="hero bg-base-200 hero-normal">
             <div style="gap: 3rem;" class="hero-content flex-col lg:flex-row-reverse">
-                <img style="max-width: 18rem;" src="./assets/feature-fun.png"
+                <img style="max-width: 18rem;" src="/assets/feature-fun.png"
                     class="max-w-sm rounded-lg shadow-2xl image-feature" />
                 <div>
                     <h1 class="text-5xl font-bold">Make discord more funny</h1>
@@ -174,7 +174,7 @@
         </div>
         <div style="padding-top: 0;" class="hero bg-base-200 hero-normal hero-mod">
             <div style="gap: 3rem;" class="hero-content flex-col lg:flex-row">
-                <img style="max-width: 18rem;" src="./assets/feature-mod.png" class="max-w-sm rounded-lg shadow-2xl" />
+                <img style="max-width: 18rem;" src="/assets/feature-mod.png" class="max-w-sm rounded-lg shadow-2xl" />
                 <div>
                     <h1 class="text-5xl font-bold">Make moderation easier</h1>
                     <p class="py-6">Now to can use command to moderation your server</p>
@@ -188,7 +188,7 @@
             <div class="tilt-in-bottom-1" style="display: none;" id="OtherFeature">
                 <div style="padding-top: 0;" class="hero hero-normal">
                     <div style="gap: 3rem;" class="hero-content flex-col lg:flex-row-reverse">
-                        <img style="max-width: 20rem;" src="./assets/feature-chat.png"
+                        <img style="max-width: 20rem;" src="/assets/feature-chat.png"
                             class="max-w-sm rounded-lg shadow-2xl image-feature" />
                         <div>
                             <h1 class="text-5xl font-bold">Interact with you</h1>
@@ -281,7 +281,7 @@
             <div class="hero-content text-center">
                 <div class="max-w-md">
                     <h1 style="font-family: Young Serif;" class="text-5xl font-bold">Story</h1>
-                    <img style="max-width: 18rem;margin: auto;margin-top: 22.5px;" src="./assets/banner/Card-Futami.png"
+                    <img style="max-width: 18rem;margin: auto;margin-top: 22.5px;" src="/assets/banner/Card-Futami.png"
                         class="max-w-sm rounded-lg shadow-2xl" />
                     <p class="py-6">Futami is a music bot created by FujaTyping in response to a request from his close
                         friend, ph007phop. Futami can play music from a variety of sources and quickly gained popularity
@@ -328,7 +328,7 @@
     <dialog id="thankyou" class="modal">
         <div class="modal-box">
             <h3 class="font-bold text-lg">Thank you !</h3>
-            <img style="max-width: 18rem;margin: auto;" src="./assets/maskcot/Futami-thankyou.png"
+            <img style="max-width: 18rem;margin: auto;" src="/assets/maskcot/Futami-thankyou.png"
                 class="max-w-sm rounded-lg" />
             <p class="py-4">🎉 Thank you for inviting Futami to the server!<br>Explore Futami's commands on this
                 page<br><br>If you enjoy this project, consider supporting Futami : <a
@@ -345,8 +345,8 @@
     <dialog id="pleaseread_modal" class="modal">
         <div class="modal-box">
             <h3 class="font-bold text-lg">Privacy & Terms</h3>
-            <p class="py-4">Please read our <a style="text-decoration: underline;" href="./document.html">Terms Of
-                    Service</a> and <a href="./document.html" style="text-decoration: underline;">Privacy Policy</a>
+            <p class="py-4">Please read our <a style="text-decoration: underline;" href="/document.html">Terms Of
+                    Service</a> and <a href="/document.html" style="text-decoration: underline;">Privacy Policy</a>
                 <br><br>The
                 developer may change these terms of service at any time. Any changes will be posted on the Futami
                 website and will take effect immediately.<br><br>
