--- a/service/statics.html
+++ b/service/statics.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./assets/fav.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/assets/fav.ico" type="image/x-icon">
     <meta property="og:type" content="website" />
     <title>Futami | สถานะฟูตามิ</title>
     <meta name="theme-color" content="#345ca8" />
@@ -19,16 +19,16 @@
     <meta name="twitter:site" content="@fujatyping" />
     <meta name="twitter:creator" content="@fujatyping" />
     <meta property="twitter:image" content="https://futami.siraphop.me/assets/banner/content-statics.png" />
-    <link href="./module/daisyui.css" rel="stylesheet" type="text/css" />
-    <script src="./module/tailwind.js"></script>
+    <link href="/module/daisyui.css" rel="stylesheet" type="text/css" />
+    <script src="/module/tailwind.js"></script>
     <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="./module/animate.css" />
+    <link rel="stylesheet" href="/module/animate.css" />
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <script src="./script/darkmode.js"></script>
-    <script defer src="./index.js"></script>
-    <script defer src="./script/request.js"></script>
-    <script src="./module/axios.js"></script>
+    <script src="/script/darkmode.js"></script>
+    <script defer src="/index.js"></script>
+    <script defer src="/script/request.js"></script>
+    <script src="/module/axios.js"></script>
 </head>
 
 <body onmousemove="GetCursor(event)">
@@ -48,12 +48,12 @@
                 <div class="max-w-md">
                     <h1 style="font-family: Young Serif;" class="text-5xl font-bold">Statics & Status</h1>
                     <p class="py-6"><b>Status refresh every 3 minute | Statics refresh every song play</b></p>
-                    <button onclick="window.location.href = './';" class="btn"><span
+                    <button onclick="window.location.href = '/';" class="btn"><span
                             class="material-symbols-outlined">arrow_back</span>Back</button>
                 </div>
             </div>
         </div>
-        <img width="100%" src="./assets/divider.png">
+        <img width="100%" src="/assets/divider.png">
         <div id="FetchContainer" style="padding-top: 40px;padding-bottom: 50px;" class="hero bg-base-200 min-h-screen">
             <div class="hero-content text-center">
                 <div class="max-w-md lefted">
