--- a/service/404.html
+++ b/service/404.html
@@ -4,19 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./assets/fav.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/assets/fav.ico" type="image/x-icon">
     <meta property="og:type" content="website" />
     <title>Futami | 404</title>
     <meta name="theme-color" content="#345ca8" />
     <meta name="description" content="Futami - 404">
-    <link href="./module/daisyui.css" rel="stylesheet" type="text/css" />
-    <script src="./module/tailwind.js"></script>
+    <link href="/module/daisyui.css" rel="stylesheet" type="text/css" />
+    <script src="/module/tailwind.js"></script>
     <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="./module/animate.css" />
+    <link rel="stylesheet" href="/module/animate.css" />
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <script src="./script/darkmode.js"></script>
-    <script defer src="./index.js"></script>
+    <script src="/script/darkmode.js"></script>
+    <script defer src="/index.js"></script>
 </head>
 
 <body onmousemove="GetCursor(event)">
@@ -35,13 +35,13 @@
             <div style="gap: 3rem;"
                 class="hero-content flex-col lg:flex-row-reverse animate__animated animate__fadeInUp">
                 <div class="">
-                    <img style="max-width: 18rem;" src="./assets/maskcot/Futami-help.png"
+                    <img style="max-width: 18rem;" src="/assets/maskcot/Futami-help.png"
                         class="max-w-sm rounded-lg parallax-img" />
                 </div>
                 <div>
                     <h1 class="text-5xl font-bold">Oh no! ,You got 404</h1>
                     <p class="py-6">The page that you finding does not exist ! , Plase check the url again</p>
-                    <button onclick="window.location.href = './';" class="btn">Back to homepage <span
+                    <button onclick="window.location.href = '/';" class="btn">Back to homepage <span
                             class="material-symbols-outlined">home</span></button>
                 </div>
             </div>
