--- a/service/document.html
+++ b/service/document.html
@@ -21,7 +21,7 @@
     <meta property="twitter:image" content="https://futami.siraphop.me/assets/banner/content-pat.png" />
     <link href="/module/daisyui.css" rel="stylesheet" type="text/css" />
     <script src="/module/tailwind.js"></script>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="/index.css">
     <link rel="stylesheet" href="/module/animate.css" />
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
