--- a/service/404.html
+++ b/service/404.html
@@ -11,7 +11,7 @@
     <meta name="description" content="Futami - 404">
     <link href="/module/daisyui.css" rel="stylesheet" type="text/css" />
     <script src="/module/tailwind.js"></script>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="/index.css">
     <link rel="stylesheet" href="/module/animate.css" />
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
