--- a/service/index.html
+++ b/service/index.html
@@ -136,8 +136,7 @@
         </div>
         <div style="padding-top: 5px;" class="hero bg-base-200 hero-normal hero-music">
             <div style="gap: 3rem;" class="hero-content flex-col lg:flex-row-reverse">
-                <img style="max-width: 18rem;" src="/assets/feature-music.png"
-                    class="max-w-sm rounded-lg shadow-2xl" />
+                <img style="max-width: 18rem;" src="/assets/feature-music.png" class="max-w-sm rounded-lg shadow-2xl" />
                 <div>
                     <h1 class="text-5xl font-bold">Support many music platform</h1>
                     <p class="py-6">Future will support more platform :D</p>
@@ -269,6 +268,7 @@
                                     <b><kbd class="kbd kbd-sm">/</kbd> info</b> : Show server info<br>
                                     <b><kbd class="kbd kbd-sm">/</kbd> about</b> : See about me<br>
                                     <b><kbd class="kbd kbd-sm">/</kbd> url</b> : A Url tools<br>
+                                    <b><kbd class="kbd kbd-sm">/</kbd> request</b> : Give Futami a feedback<br>
                                     <b>ping</b> : See my response time<br>
                                 </p>
                             </div>
