Add AOS library

--- a/service/document.html
+++ b/service/document.html
@@ -23,10 +23,12 @@
     <script src="/module/tailwind.js"></script>
     <link rel="stylesheet" href="/index.css">
     <link rel="stylesheet" href="/module/animate.css" />
+    <link rel="stylesheet" href="/module/aos.css" />
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <script src="/script/darkmode.js"></script>
     <script defer src="/index.js"></script>
+    <script src="/module/aos.js"></script>
 </head>
 
 <body onmousemove="GetCursor(event)">
@@ -73,7 +75,7 @@
             <div class="hero-content text-center">
                 <div class="max-w-md lefted">
                     <h1 style="font-family: Young Serif;" class="text-5xl font-bold">Privacy policy</h1>
-                    <p class="py-6">
+                    <p data-aos="fade-up" class="py-6">
                         <b>Last updated: 20/04/2024</b><br><br>
 
                         Futami collects your Discord user ID, username, and server IDs. Futami uses this information to
@@ -90,7 +92,7 @@
             <div class="hero-content text-center">
                 <div class="max-w-md lefted">
                     <h1 style="font-family: Young Serif;" class="text-5xl font-bold">Terms of service</h1>
-                    <p class="py-6">
+                    <p data-aos="fade-up" class="py-6">
                         <b>Last updated: 20/04/2024</b><br><br>
 
                         By using Futami, you agree to the following:<br><br>
