--- a/service/index.html
+++ b/service/index.html
@@ -23,6 +23,7 @@
     <script src="/module/tailwind.js"></script>
     <link rel="stylesheet" href="/index.css">
     <link rel="stylesheet" href="/module/animate.css" />
+    <link rel="stylesheet" href="/module/aos.css" />
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <script src="/script/darkmode.js"></script>
@@ -30,6 +31,7 @@
     <script defer src="/script/request.js"></script>
     <script src="/module/axios.js"></script>
     <script src="/module/typed.js"></script>
+    <script src="/module/aos.js"></script>
 </head>
 
 <body onmousemove="GetCursor(event)">
@@ -135,7 +137,7 @@
             </div>
         </div>
         <div style="padding-top: 5px;" class="hero bg-base-200 hero-normal hero-music">
-            <div style="gap: 3rem;" class="hero-content flex-col lg:flex-row-reverse">
+            <div data-aos="fade-right" style="gap: 3rem;" class="hero-content flex-col lg:flex-row-reverse">
                 <img style="max-width: 18rem;" src="/assets/feature-music.png" class="max-w-sm rounded-lg shadow-2xl" />
                 <div>
                     <h1 class="text-5xl font-bold">Support many music platform</h1>
@@ -152,7 +154,7 @@
             </div>
         </div>
         <div style="padding-top: 0;" class="hero bg-base-200 hero-normal hero-game">
-            <div style="gap: 3rem;" class="hero-content flex-col lg:flex-row">
+            <div data-aos="fade-left" style="gap: 3rem;" class="hero-content flex-col lg:flex-row">
                 <img style="max-width: 18rem;" src="/assets/feature-game.png"
                     class="max-w-sm rounded-lg shadow-2xl image-feature" />
                 <div>
@@ -162,7 +164,7 @@
             </div>
         </div>
         <div style="padding-top: 0;" class="hero bg-base-200 hero-normal">
-            <div style="gap: 3rem;" class="hero-content flex-col lg:flex-row-reverse">
+            <div data-aos="fade-right" style="gap: 3rem;" class="hero-content flex-col lg:flex-row-reverse">
                 <img style="max-width: 18rem;" src="/assets/feature-fun.png"
                     class="max-w-sm rounded-lg shadow-2xl image-feature" />
                 <div>
@@ -172,7 +174,7 @@
             </div>
         </div>
         <div style="padding-top: 0;" class="hero bg-base-200 hero-normal hero-mod">
-            <div style="gap: 3rem;" class="hero-content flex-col lg:flex-row">
+            <div data-aos="fade-left" style="gap: 3rem;" class="hero-content flex-col lg:flex-row">
                 <img style="max-width: 18rem;" src="/assets/feature-mod.png" class="max-w-sm rounded-lg shadow-2xl" />
                 <div>
                     <h1 class="text-5xl font-bold">Make moderation easier</h1>
@@ -281,22 +283,26 @@
             <div class="hero-content text-center">
                 <div class="max-w-md">
                     <h1 style="font-family: Young Serif;" class="text-5xl font-bold">Story</h1>
-                    <img style="max-width: 18rem;margin: auto;margin-top: 22.5px;" src="/assets/banner/Card-Futami.png"
-                        class="max-w-sm rounded-lg shadow-2xl" />
-                    <p class="py-6">Futami is a music bot created by FujaTyping in response to a request from his close
-                        friend, ph007phop. Futami can play music from a variety of sources and quickly gained popularity
-                        among Discord users. &nbsp;<span style="display: inline;" onclick="FutamiSay('About')"
-                            class="point">🎙</span></p>
-                    <div class="join lastjoin">
-                        <button onclick="window.location.href = 'https://discord.gg/D5nVCNskqN';"
-                            class="btn join-item"><span class="material-symbols-outlined">support_agent</span>
-                            Support</button>
-                        <button onclick="window.location.href = 'https://buymeacoffee.com/fujatyping';"
-                            class="btn join-item"><span class="material-symbols-outlined">savings</span>
-                            Donate</button>
-                        <button onclick="window.location.href = 'https://github.com/FujaTyping/Futami';"
-                            class="btn join-item"><span class="material-symbols-outlined">frame_source</span>
-                            Source code</button>
+                    <div data-aos="fade-up">
+                        <img style="max-width: 18rem;margin: auto;margin-top: 22.5px;"
+                            src="/assets/banner/Card-Futami.png" class="max-w-sm rounded-lg shadow-2xl" />
+                        <p class="py-6">Futami is a music bot created by FujaTyping in response to a request from his
+                            close
+                            friend, ph007phop. Futami can play music from a variety of sources and quickly gained
+                            popularity
+                            among Discord users. &nbsp;<span style="display: inline;" onclick="FutamiSay('About')"
+                                class="point">🎙</span></p>
+                        <div class="join lastjoin">
+                            <button onclick="window.location.href = 'https://discord.gg/D5nVCNskqN';"
+                                class="btn join-item"><span class="material-symbols-outlined">support_agent</span>
+                                Support</button>
+                            <button onclick="window.location.href = 'https://buymeacoffee.com/fujatyping';"
+                                class="btn join-item"><span class="material-symbols-outlined">savings</span>
+                                Donate</button>
+                            <button onclick="window.location.href = 'https://github.com/FujaTyping/Futami';"
+                                class="btn join-item"><span class="material-symbols-outlined">frame_source</span>
+                                Source code</button>
+                        </div>
                     </div>
                 </div>
             </div>
